# Hyprmonitor

./: README.md  pyproject.toml  requirements.txt  setup.py
hyprmonitor/: __main__.py  hyprmonitor.py  hyprmonitor.py.swp
