[project]
name="hyprmonitor"
version="0.0.1"
description="A tiny multi monitor QT-app for Hyprland"
readme="README.md"
requires-python=">=3.12"
license={file="LICENSE"}
authors=[
  {name="EEprotocol",email="keik4656@gmail.com"},
]
dependencies = [
  "Brotli==1.1.0",
  "chardet==5.2.0",
  "PyQt6_sip==13.10.0",
  "zstandard==0.23.0"
]
